--- a/frontend/src/components/ShopView/ShopView.css
+++ b/frontend/src/components/ShopView/ShopView.css
@@ -72,6 +72,7 @@
   align-items: center;
   */
   display: grid;
+  align-items: center;
   width: 95vw;
   /* grid-template-columns: 1fr 1fr 1fr; */
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
